--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-type-animation": "^3.2.0"
+    "react-type-animation": "^3.2.0",
+    "vercel": "^33.6.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
